--- a/src/components/contactForm/ContactForm.module.css
+++ b/src/components/contactForm/ContactForm.module.css
@@ -7,12 +7,12 @@
   margin-bottom: 20px;
 }
 
-.form__input {
+.input {
   width: 80%;
   margin-left: 15px;
 }
 
-.form__button {
+.btn {
   width: 40%;
   margin: 20px;
 }
